# arraybridge

./: README.md
scidb-15.7.0.9267/: CMakeLists.txt  install.cmake  license.py.txt  run.py  scidb.spec.in
scidb-15.7.0.9267/cmake/: uninstall.cmake.in
scidb-15.7.0.9267/cmake/Modules/: CompareVersionsStrings.cmake  FindCAT.cmake  FindCityHash.cmake  FindFLEX.cmake  FindFop.cmake  FindJava.cmake  FindLibPQXX.cmake  FindLibReadline.cmake  FindLog4CXX.cmake  FindMPI.cmake  FindProtobuf.cmake  FindSWIG2.cmake  FindScaLAPACK.cmake  LinuxDistroVersion.cmake
scidb-15.7.0.9267/debian/: changelog.in  control.precise.in  control.trusty.in  postinst_in  rules.in
scidb-15.7.0.9267/deployment/: deploy.sh
scidb-15.7.0.9267/deployment/common/: configure_postgresql.py  prepare_coordinator.sh  prepare_toolchain.sh  register_3rdparty_scidb_repository.sh  register_scidb_repository.sh  scidb_install_release.sh  scidb_prepare_coordinator.sh  scidb_remove_release.sh  scidb_start.sh  scidb_stop.sh  setup_ccache.sh  user_access.sh
scidb-15.7.0.9267/doc/: CMakeLists.txt
scidb-15.7.0.9267/examples/: CMakeLists.txt
scidb-15.7.0.9267/examples/bestmatch/: BestMatchArray.cpp  CMakeLists.txt  LogicalBestMatch.cpp  PhysicalBestMatch.cpp  plugin.cpp
scidb-15.7.0.9267/examples/complex/: CMakeLists.txt  complex.cpp
scidb-15.7.0.9267/examples/example_udos/: CMakeLists.txt  README  plugin.cpp  standalone_makefile
scidb-15.7.0.9267/examples/fits/: plugin.cpp  (+1 more)
scidb-15.7.0.9267/examples/load_tools/: CMakeLists.txt  Functions.cpp  LogicalParse.cpp  LogicalSplit.cpp  ParseSettings.h  PhysicalParse.cpp  PhysicalSplit.cpp
scidb-15.7.0.9267/include/: SciDBAPI.h
scidb-15.7.0.9267/scripts/: bellman_ford_example.sh  pagerank_example.sh  setup_scidb_example.py
scidb-15.7.0.9267/src/array/: Array.cpp  ArrayDistribution.cpp  CMakeLists.txt  DBArray.cpp  DeepChunkMerger.cpp  DeepChunkMerger.h  DelegateArray.cpp  ListArrayBuilder.cpp  LogicalTestCache.cpp  MemChunk.cpp  MergeSortArray.cpp  Metadata.cpp  ParallelAccumulatorArray.cpp  PhysicalTestCache.cpp  RLE.cpp  SortArray.cpp  SpatialRangesChunkPosIterator.cpp  StreamArray.cpp  Tile.cpp  TransientCache.cpp  TupleArray.cpp  UnitTestChunkLimitLogical.cpp  UnitTestChunkLimitPhysical.cpp  UnitTestDeepChunkMergeLogical.cpp  UnitTestDeepChunkMergePhysical.cpp  UnitTestMemArrayLogical.cpp  UnitTestMemArrayPhysical.cpp  UnitTestSortArrayLogical.cpp  UnitTestSortArrayPhysical.cpp
scidb-15.7.0.9267/src/linear_algebra/: CMakeLists.txt
scidb-15.7.0.9267/src/linear_algebra/spgemm/: CSRBlock.h  CSRBlockVector.h  LogicalSpgemm.cpp  PhysicalSpgemm.cpp  SpgemmBlock.h  SpgemmBlock_impl.h  SpgemmTimes.h  spgemmSemiringTraits.h
scidb-15.7.0.9267/src/linear_algebra/stats/: HypergeometricFunctions.cpp
scidb-15.7.0.9267/tests/: CMakeLists.txt
scidb-15.7.0.9267/utils/: CMakeLists.txt  benchGen.cc  calculate_chunk_length.py  centos-6-x86_64.cfg  check_or_replace_copyright.pl  f77_check.sh  gen_csv.pl  init-db.sh  loadpipe.py  log1.properties  make_packages.sh  make_repo.py  oprof.sh  paradigm4.lic  prelude.txt.in  raw2load.pl  remove_arrays.py  scidb.py.in  scidb_backup.py  update_alternatives.sh
scidb-trunk/: .gitignore  .reviewboardrc  CMakeLists.txt  install.cmake  license.txt  revision  run.py  scidb.spec.in
scidb-trunk/debian/: changelog.in  control.precise.in  control.trusty.in
scidb-trunk/deployment/: deploy.sh
scidb-trunk/doc/: operators.html
scidb-trunk/include/: SciDBAPI.h
scidb-trunk/scripts/: bellman_ford_example.sh  openssl_gen_password_example.sh  pagerank_example.sh  setup_scidb_example.py
scidb-trunk/src/: CMakeLists.txt
scidb-trunk/src/capi/: CMakeLists.txt  SciDBRemote.cpp  SciDBRemoteStubs.cpp  scidbpython.i
scidb-trunk/src/capi/pythonexamples/: pythonsample2.py
scidb-trunk/src/jdbc/: CMakeLists.txt  build.xml
scidb-trunk/src/jdbc/example/org/scidb/: JDBCExample.java
scidb-trunk/src/jdbc/jdbctest/org/scidb/: JDBCBasicTestCase.java  JDBCTest.java
scidb-trunk/src/jdbc/scidb4j/org/apache/commons/cli/: AmbiguousOptionException.java  CommandLine.java  CommandLineParser.java  DefaultParser.java  HelpFormatter.java  Option.java  OptionBuilder.java  OptionGroup.java  OptionValidator.java  Options.java  Parser.java  PatternOptionBuilder.java  PosixParser.java  README.txt  TypeHandler.java  Util.java  package-info.java
scidb-trunk/src/jdbc/scidb4j/org/scidb/client/: Array.java  AuthenticationFile.java  Chunk.java  ConfigUser.java  ConfigUserException.java  Connection.java  PrepareResult.java  QueryID.java  Result.java  WarningCallback.java
scidb-trunk/src/jdbc/scidb4j/org/scidb/io/network/: Message.java  Network.java
scidb-trunk/src/jdbc/scidb4j/org/scidb/iquery/: Config.java  Iquery.java
scidb-trunk/src/jdbc/scidb4j/org/scidb/jdbc/: Connection.java  IStatementWrapper.java
scidb-trunk/src/jdbc/scidb4j/org/scidb/util/: ByteBufferExtensions.java  InputStreamWithReadall.java
scidb-trunk/src/smgr/compression/: BitInputItr.cpp  BitInputItr.h  BitOutputItr.cpp  BuiltinCompressors.h  ByteInputItr.cpp  ByteOutputItr.h  CMakeLists.txt  Compressor.cpp  DictionaryEncodingByteWise.cpp  RunLengthEncoding.cpp
scidb-trunk/src/usr_namespace/: CMakeLists.txt  ConnectionClientCommunicator.cpp  NamespaceDesc.cpp  NamespaceObject.cpp  NamespacesCommunicator.cpp  NamespacesCommunicator.h  RoleDesc.cpp  SecurityCommunicator.cpp  SecurityCommunicator.h  UserDesc.cpp
scidb-trunk/src/util/dmalloc/: CMakeLists.txt
scidb-trunk/utils/: CMakeLists.txt  benchGen.cc  centos-6-x86_64.cfg  chroot_build.py  chunk_stats.py  init-db.sh  init-scidb.sh  licensing.pl  list_arrays.py  loadpipe.py  make_packages.sh  make_repo.sh  prelude.txt.in  remove_arrays.py  scidb-prepare-db.sh.in  scidb.lic  scidb.py.in  scidb_backup.py  scidb_cores
scidb-trunk/utils/iquery/: CMakeLists.txt  IqueryConfig.h  commands.h  iquery.cpp  iquery_parser.h  keywords.cpp  parser.yy  scanner.ll
scidb-trunk/utils/scidblib/: __init__.py  counter.py  scidb_afl.py  scidb_control.py  scidb_math.py  scidb_progress.py  scidb_schema.py  util.py
scidb-trunk/utils/shim/: CMakeLists.txt
(+2147 files in other folders)
